# chatter

./: CMakeLists.txt
inc/: shared.h  tcp.h
src/: client.c  libs.c  server.c  shared.c  tcp.c
